--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/pages/index.html">
+                <a href="/index.html">
                     <img src="/img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
