修正所有頁面資源路徑，加上 /Mewseum/

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/cart.css">
+    <link rel="stylesheet" href="/Mewseum/css/layout.css">
+    <link rel="stylesheet" href="/Mewseum/css/cart.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
 </head>
@@ -12,28 +12,28 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/index.html">
-                    <img src="/img/logo_h.svg" alt="Museum_logo">
+                <a href="/Mewseum/index.html">
+                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/pages/faq.html">FAQ</a></li>
+                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
+                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
+                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="/img/icon/search.svg" alt="search">
+                    <img src="/Mewseum/img/icon/search.svg" alt="search">
                 </a>
-                <a href="/pages/login.html">
-                    <img src="/img/icon/login.svg" alt="login">
+                <a href="/Mewseum/pages/login.html">
+                    <img src="/Mewseum/img/icon/login.svg" alt="login">
                 </a>
-                <a href="/pages/cart.html">
-                    <img src="/img/icon/cart.svg" alt="shoppingcart">
+                <a href="/Mewseum/pages/cart.html">
+                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -57,7 +57,7 @@
                         <tr>
                             <td>
                                 <div class="product_info">
-                                    <img src="/img/shoppingcart/peral.svg" alt="橘貓與他的珍珠耳環">
+                                    <img src="/Mewseum/img/shoppingcart/peral.svg" alt="橘貓與他的珍珠耳環">
                                     <span>橘貓與他的珍珠耳環</span>
                                 </div>
                             </td>
@@ -74,7 +74,7 @@
                         <tr>
                             <td>
                                 <div class="product_info">
-                                    <img src="/img/shoppingcart/takebrokencat.svg" alt="拿破貓">
+                                    <img src="/Mewseum/img/shoppingcart/takebrokencat.svg" alt="拿破貓">
                                     <span>拿破貓</span>
                                 </div>
                             </td>
@@ -92,7 +92,7 @@
                 </table>
 
                 <div class="cart_actions_bottom">
-                    <button onclick="location.href='/pages/shop.html'" class="btn btn_secondary">返回商品頁面</button>
+                    <button onclick="location.href='/Mewseum/pages/shop.html'" class="btn btn_secondary">返回商品頁面</button>
                     <button class="btn btn_primary">更新購物車</button>
                 </div>
             </div>
@@ -125,7 +125,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="/img/logo_V.svg" alt="Museum_logo2">
+                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -157,13 +157,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="/img/icon/email.svg" alt="email">
+                            <img src="/Mewseum/img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="/img/icon/line.svg" alt="line">
+                            <img src="/Mewseum/img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="/img/icon/ig.svg" alt="instagram">
+                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
