--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/product-detail.css">
+    <link rel="stylesheet" href="/Mewseum/css/layout.css">
+    <link rel="stylesheet" href="/Mewseum/css/product-detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
 </head>
@@ -12,28 +12,28 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/index.html">
-                    <img src="/img/logo_h.svg" alt="Museum_logo">
+                <a href="/Mewseum/index.html">
+                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/pages/faq.html">FAQ</a></li>
+                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
+                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
+                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="/img/icon/search.svg" alt="search">
+                    <img src="/Mewseum/img/icon/search.svg" alt="search">
                 </a>
-                <a href="/pages/login.html">
-                    <img src="/img/icon/login.svg" alt="login">
+                <a href="/Mewseum/pages/login.html">
+                    <img src="/Mewseum/img/icon/login.svg" alt="login">
                 </a>
-                <a href="/pages/cart.html">
-                    <img src="/img/icon/cart.svg" alt="shoppingcart">
+                <a href="/Mewseum/pages/cart.html">
+                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -43,12 +43,12 @@
         <div class="info_wrap">
         <section class="product_main">
             <div class="thumbnail_list">
-                <img src="/img/singleshoppage/2.svg" alt="商品展示1" class="thumbnail">
-                <img src="/img/singleshoppage/3.svg" alt="商品展示2" class="thumbnail">
-                <img src="/img/singleshoppage/4.svg" alt="商品展示3" class="thumbnail">
+                <img src="/Mewseum/img/singleshoppage/2.svg" alt="商品展示1" class="thumbnail">
+                <img src="/Mewseum/img/singleshoppage/3.svg" alt="商品展示2" class="thumbnail">
+                <img src="/Mewseum/img/singleshoppage/4.svg" alt="商品展示3" class="thumbnail">
             </div>
             <div class="product_gallery">
-                <img src="/img/singleshoppage/canvasprint.svg" alt="商品圖" class="main_img">
+                <img src="/Mewseum/img/singleshoppage/canvasprint.svg" alt="商品圖" class="main_img">
             </div>
         </section>
 
@@ -62,7 +62,7 @@
             </div>
             <p class="product_price">NT$ 950</p>
             <div class="viewers">
-                <img src="/img/singleshoppage/eye.svg" alt="eye" class="viewer">
+                <img src="/Mewseum/img/singleshoppage/eye.svg" alt="eye" class="viewer">
                 <span>24 人正在觀看此商品</span>
             </div>
             <p class="warning">庫存僅剩 9 件！</p>
@@ -86,10 +86,10 @@
 
                 <div class="cart_actions">
                     <button class="add_to_cart">加入購物車
-                        <img src="/img/singleshoppage/bag.svg" alt="bag">
+                        <img src="/Mewseum/img/singleshoppage/bag.svg" alt="bag">
                     </button>
                     <button class="wishlist_btn">
-                        <img src="/img/singleshoppage/heart.svg" alt="wish">
+                        <img src="/Mewseum/img/singleshoppage/heart.svg" alt="wish">
                     </button>
                 </div>
             </div>
@@ -115,39 +115,39 @@
             </div>
             <div class="related_items">
                 <div class="product_card">
-                    <img src="/img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
+                    <img src="/Mewseum/img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
                     <h3>喵鏡</h3>
                     <div class="rate">⭐⭐⭐⭐</div>
                     <div class="price">NT$ 990</div>
                     <button class="cart">加入購物車
-                        <img src="/img/icon/cutecart.svg" alt="cart">
+                        <img src="/Mewseum/img/icon/cutecart.svg" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
-                    <img src="/img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
+                    <img src="/Mewseum/img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
                     <h3>抱著銀貂的貓</h3>
                     <div class="rate">⭐⭐⭐⭐⭐</div>
                     <div class="price">NT$ 990</div>
                     <button class="cart">加入購物車
-                        <img src="/img/icon/cutecart.svg" alt="cart">
+                        <img src="/Mewseum/img/icon/cutecart.svg" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
-                    <img src="/img/noRadiusPrint/masiaCat.svg" alt="聖貓">
+                    <img src="/Mewseum/img/noRadiusPrint/masiaCat.svg" alt="聖貓">
                     <h3>聖貓</h3>
                     <div class="rate">⭐⭐⭐⭐⭐</div>
                     <div class="price">NT$ 890</div>
                     <button class="cart">加入購物車
-                        <img src="/img/icon/cutecart.svg" alt="cart">
+                        <img src="/Mewseum/img/icon/cutecart.svg" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
-                    <img src="/img/noRadiusPrint/StreetCat.svg" alt="回頭的浪貓">
+                    <img src="/Mewseum/img/noRadiusPrint/StreetCat.svg" alt="回頭的浪貓">
                     <h3>回頭的浪貓</h3>
                     <div class="rate">⭐⭐⭐⭐⭐</div>
                     <div class="price">NT$ 890</div>
                     <button class="cart">加入購物車
-                        <img src="/img/icon/cutecart.svg" alt="cart">
+                        <img src="/Mewseum/img/icon/cutecart.svg" alt="cart">
                     </button>
                 </div>
             </div>
@@ -157,7 +157,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="/img/logo_V.svg" alt="Museum_logo2">
+                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -189,13 +189,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="/img/icon/email.svg" alt="email">
+                            <img src="/Mewseum/img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="/img/icon/line.svg" alt="line">
+                            <img src="/Mewseum/img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="/img/icon/ig.svg" alt="instagram">
+                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
