修正資源路徑，加上 /Mewseum/

--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="/Mewseum/css/layout.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/Mewseum/css/style.css">
     <title>Museum</title>
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="index.html">
-                    <img src="img/logo_h.svg" alt="Museum_logo">
+                <a href="/Mewseum/index.html">
+                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href=/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="pages/shop.html">畫作商店</a></li>
-                    <li><a href="pages/faq.html">FAQ</a></li>
+                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
+                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
+                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="img/icon/search.svg" alt="search">
+                    <img src="/Mewseum/img/icon/search.svg" alt="search">
                 </a>
-                <a href="pages/login.html">
-                    <img src="img/icon/login.svg" alt="login">
+                <a href="/Mewseum/pages/login.html">
+                    <img src="/Mewseum/img/icon/login.svg" alt="login">
                 </a>
-                <a href="pages/cart.html">
-                    <img src="img/icon/cart.svg" alt="shoppingcart">
+                <a href="/Mewseum/pages/cart.html">
+                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -42,17 +42,17 @@
     <main>
         <section class="hero">
             <div class="hero_img">
-                <img src="img/banner.svg" alt="banner">
+                <img src="/Mewseum/img/banner.svg" alt="banner">
             </div>
             <div class="shop_cta">
                 <div class="text">
                 <p>在每一個凝視的瞬間，<br>感受貓與藝術交織的溫柔詩意。</p>
                 </div>
                 <div class="button">
-                    <a href="pages/shop.html">
+                    <a href="/Mewseum/pages/shop.html">
                         <div class="btn_wrapper">
                             <span class="btn_text">即刻啟程</span>
-                            <img src="img/creamlabel.svg" alt="catpaw_label">
+                            <img src="/Mewseum/img/creamlabel.svg" alt="catpaw_label">
                         </div>
                     </a>
                 </div>
@@ -64,61 +64,61 @@
                 <h2>熱門商品</h2>
                 <div class="item_grid">
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/VanCat.svg" alt="絕育剪耳自畫像">
+                        <img src="/Mewseum/img/noRadiusPrint/VanCat.svg" alt="絕育剪耳自畫像">
                         <h3>絕育剪耳自畫像</h3>
                         <div class="price">NT$ 1,080</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/Peralcat.svg" alt="戴著鋼珠耳環的貓">
+                        <img src="/Mewseum/img/noRadiusPrint/Peralcat.svg" alt="戴著鋼珠耳環的貓">
                         <h3>戴著鋼珠耳環的貓</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/yellingCat.svg" alt="吶尼">
+                        <img src="/Mewseum/img/noRadiusPrint/yellingCat.svg" alt="吶尼">
                         <h3>吶尼</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/dancingCat.svg" alt="舞喵">
+                        <img src="/Mewseum/img/noRadiusPrint/dancingCat.svg" alt="舞喵">
                         <h3>舞喵</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/monaleeCat.svg" alt="蒙娜麗喵的賊笑">
+                        <img src="/Mewseum/img/noRadiusPrint/monaleeCat.svg" alt="蒙娜麗喵的賊笑">
                         <h3>蒙娜麗喵的賊笑</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/awakecat.svg" alt="吵醒">
+                        <img src="/Mewseum/img/noRadiusPrint/awakecat.svg" alt="吵醒">
                         <h3>吵醒</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
+                        <img src="/Mewseum/img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
                         <h3>喵鏡</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
+                        <img src="/Mewseum/img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
                         <h3>抱著銀貂的貓</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                 </div>
                 <div class="see_more_btn">
-                    <a href="pages/shop.html">
+                    <a href="/Mewseum/pages/shop.html">
                     <span class="see_more_text">查看更多</span>
-                    <img src="img/pinklabel.svg" alt="catpaw_label">
+                    <img src="/Mewseum/img/pinklabel.svg" alt="catpaw_label">
                     </a>
                 </div>            
             </div>
         </section>
 
         <section class="about">
-                <img class="about_bg" src="img/hone_about_bg.svg" alt="貓背景圖">
+                <img class="about_bg" src="/Mewseum/img/hone_about_bg.svg" alt="貓背景圖">
             <div class="about_container">
                 <div class="about_wrap">
                     <div class="pic">
-                        <img src="img/catwithbluehat.svg" alt="畫家貓">
+                        <img src="/Mewseum/img/catwithbluehat.svg" alt="畫家貓">
                     </div>
                     <div class="text">
                         <h4>「從畫框中走出的貓，是藝術與<br>生活的連結。」</h4>
@@ -127,9 +127,9 @@
                         <p>我們用柔和的色彩、溫暖的靈魂與輕鬆的命名方式，<br>讓每幅畫都多了一點親切感。創立這個品牌，<br>是因為我們想把藝術帶回日常。</p>
 
                     <div class="about_btn">
-                        <a href="pages/about.html">
+                        <a href="/Mewseum/pages/about.html">
                         <span class="about_btn_text">進入喵繪藝想</span>
-                        <img src="img/pinklabel.svg" alt="catpaw_label">
+                        <img src="/Mewseum/img/pinklabel.svg" alt="catpaw_label">
                         </a>
                     </div>            
                     </div>
@@ -142,7 +142,7 @@
             <div class="slider_track">
                 <div class="customer_review_card">
                     <div class="user_wrap">
-                        <img class="avatar" src="img/guest/guest3.svg" alt="avatar_cat">
+                        <img class="avatar" src="/Mewseum/img/guest/guest3.svg" alt="avatar_cat">
                         <div class="user_info">
                             <h3 class="title">辦公室裡的紓壓小秘訣！</h3>
                             <h4 class="name">上班族小綠</h4>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="customer_review_card">
                     <div class="user_wrap">
-                        <img class="avatar" src="img/guest/guest1.svg" alt="avatar_cat">
+                        <img class="avatar" src="/Mewseum/img/guest/guest1.svg" alt="avatar_cat">
                         <div class="user_info">
                             <h3 class="title">喵的！這藝術品太讚了！</h3>
                             <h4 class="name">貓奴阿哲</h4>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="customer_review_card">
                     <div class="user_wrap">
-                        <img class="avatar" src="img/guest/guest2.svg" alt="avatar_cat">
+                        <img class="avatar" src="/Mewseum/img/guest/guest2.svg" alt="avatar_cat">
                         <div class="user_info">
                             <h3 class="title">送禮自用兩相宜！</h3>
                             <h4 class="name">小魚兒</h4>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="customer_review_card">
                     <div class="user_wrap">
-                        <img class="avatar" src="img/guest/guest3.svg" alt="avatar_cat">
+                        <img class="avatar" src="/Mewseum/img/guest/guest3.svg" alt="avatar_cat">
                         <div class="user_info">
                             <h3 class="title">超乎期待的精緻度！</h3>
                             <h4 class="name">藝術喵</h4>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="customer_review_card">
                     <div class="user_wrap">
-                        <img class="avatar" src="img/guest/guest1.svg" alt="avatar_cat">
+                        <img class="avatar" src="/Mewseum/img/guest/guest1.svg" alt="avatar_cat">
                         <div class="user_info">
                             <h3 class="title">每天回家都被療癒！</h3>
                             <h4 class="name">懶貓咪</h4>
@@ -214,7 +214,7 @@
                 </div>
                 <div class="newsletter_img">
                     <div class="speech_text">蛤?!<br>你還沒訂閱?!</div>
-                    <img src="img/shockedcat.svg" alt="訂閱泡泡圖">
+                    <img src="/Mewseum/img/shockedcat.svg" alt="訂閱泡泡圖">
                 </div>
             </div>
         </section>
@@ -223,7 +223,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="img/logo_V.svg" alt="Museum_logo2">
+                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -255,13 +255,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="img/icon/email.svg" alt="email">
+                            <img src="/Mewseum/img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="img/icon/line.svg" alt="line">
+                            <img src="/Mewseum/img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="img/icon/ig.svg" alt="instagram">
+                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
