nav區域補上缺失/Mewseum/

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/pages/faq.html">FAQ</a></li>
+                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
+                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
+                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
