--- a/pages/shop.html
+++ b/pages/shop.html
@@ -73,7 +73,7 @@
             <h2 class="title">畫作商店</h2>
             <div class="shop_header">
                 <nav class="breadcrumb">
-                    <a href="/Mewseum/css/shop.css">全部商品</a>
+                    <a href="/Mewseum/pages/shop.html">全部商品</a>
                     <span class="divider">›</span>
                     <a href="/Mewseum/pages/shop.html">經典致敬系列</a>
                 </nav>
