--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section class="hero">
             <div class="hero_img">
-                <img src="./img/banner.svg" alt="banner">
+                <img src="./img/banner.png" alt="banner">
             </div>
             <div class="shop_cta">
                 <div class="text">
