將商品圖svg更改為png以降低負載量

--- a/index.html
+++ b/index.html
@@ -64,42 +64,42 @@
                 <h2>熱門商品</h2>
                 <div class="item_grid">
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/VanCat.svg" alt="絕育剪耳自畫像">
+                        <img src="./img/noRadiusPrint/VanCat.png" alt="絕育剪耳自畫像">
                         <h3>絕育剪耳自畫像</h3>
                         <div class="price">NT$ 1,080</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/Peralcat.svg" alt="戴著鋼珠耳環的貓">
+                        <img src="./img/noRadiusPrint/Peralcat.png" alt="戴著鋼珠耳環的貓">
                         <h3>戴著鋼珠耳環的貓</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/yellingCat.svg" alt="吶尼">
+                        <img src="./img/noRadiusPrint/yellingCat.png" alt="吶尼">
                         <h3>吶尼</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/dancingCat.svg" alt="舞喵">
+                        <img src="./img/noRadiusPrint/dancingCat.png" alt="舞喵">
                         <h3>舞喵</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/monaleeCat.svg" alt="蒙娜麗喵的賊笑">
+                        <img src="./img/noRadiusPrint/monaleeCat.png" alt="蒙娜麗喵的賊笑">
                         <h3>蒙娜麗喵的賊笑</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/awakecat.svg" alt="吵醒">
+                        <img src="./img/noRadiusPrint/awakecat.png" alt="吵醒">
                         <h3>吵醒</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
+                        <img src="./img/noRadiusPrint/mirrorcat.png" alt="喵鏡">
                         <h3>喵鏡</h3>
                         <div class="price">NT$ 990</div>
                     </div>
                     <div class="product_card">
-                        <img src="./img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
+                        <img src="./img/noRadiusPrint/hugratcat.png" alt="抱著銀貂的貓">
                         <h3>抱著銀貂的貓</h3>
                         <div class="price">NT$ 990</div>
                     </div>
