--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mewseum/css/layout.css">
-    <link rel="stylesheet" href="/Mewseum/css/about.css">
+    <link rel="stylesheet" href="..css/layout.css">
+    <link rel="stylesheet" href="..css/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
 </head>
@@ -12,28 +12,28 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/Mewseum/index.html">
-                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
+                <a href="..index.html">
+                    <img src="..img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
+                    <li><a href="..pages/about.html">喵繪藝想</a></li>
+                    <li><a href="..pages/shop.html">畫作商店</a></li>
+                    <li><a href="..pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="/Mewseum/img/icon/search.svg" alt="search">
+                    <img src="..img/icon/search.svg" alt="search">
                 </a>
-                <a href="/Mewseum/pages/login.html">
-                    <img src="/Mewseum/img/icon/login.svg" alt="login">
+                <a href="..pages/login.html">
+                    <img src="..img/icon/login.svg" alt="login">
                 </a>
-                <a href="/Mewseum/pages/cart.html">
-                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
+                <a href="..pages/cart.html">
+                    <img src="..img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -42,7 +42,7 @@
     <main class="about_page">
         <div class="about_hero">
             <div class="img">
-                <img src="/Mewseum/img/aboutus/banner.svg" alt="貓咪躍入畫作">
+                <img src="..img/aboutus/banner.svg" alt="貓咪躍入畫作">
                 <p class="title">貓畫館之喵繪藝想：當貓咪躍入經典畫作</p>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="story">
                 <div class="summary">
                     <div class="pic">
-                        <img src="/Mewseum/img/aboutus/ab1.svg" alt="客廳貓">
+                        <img src="..img/aboutus/ab1.svg" alt="客廳貓">
                     </div>
                     <div class="text">
                         <p>喵畫館 Mewseum，<br>是一間以貓咪為靈感，<br>幽默改寫經典名畫的藝術小店。</p>
@@ -64,7 +64,7 @@
                         <p>喵畫館不只賣畫，<br>我們想讓收藏藝術這件事，<br>變得比你想像中簡單得多，也快樂得多。</p>
                     </div>
                     <div class="pic">
-                        <img src="/Mewseum/img/aboutus/ab2.svg" alt="裝飾於客廳">
+                        <img src="..img/aboutus/ab2.svg" alt="裝飾於客廳">
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         <section class="concept">
             <div class="concept_container">
                 <div class="line">
-                    <img src="/Mewseum/img/aboutus/catheadline.svg" alt="貓頭分隔線">
+                    <img src="..img/aboutus/catheadline.svg" alt="貓頭分隔線">
                     <div class="text">
                         <P>「我們的發想，根植於對解構與重塑的文化趣味。」</P>
                         <P>長久以來，經典藝術往往帶有高雅卻也略顯距離感的印象。</P>
@@ -95,12 +95,12 @@
                         <p>我們相信，優良的工藝與精湛的印刷，<br>是賦予藝術作品生命力的重要環節。<br>喵畫館將持續秉持著對品質的嚴格要求，<br>為您呈現每一幅值得珍藏的喵式藝術。</p>
                     </div>
                     <div class="pic">
-                        <img src="/Mewseum/img/aboutus/ab3.svg" alt="貓無框畫">
+                        <img src="..img/aboutus/ab3.svg" alt="貓無框畫">
                     </div>
                 </div>
                 <div class="vision">
                     <div class="pic">
-                        <img src="/Mewseum/img/aboutus/ab4.svg" alt="客廳畫作">
+                        <img src="..img/aboutus/ab4.svg" alt="客廳畫作">
                     </div>
                     <div class="text">
                         <h2>使命與願景</h2>
@@ -115,7 +115,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
+                <img src="..img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -147,13 +147,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="/Mewseum/img/icon/email.svg" alt="email">
+                            <img src="..img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/line.svg" alt="line">
+                            <img src="..img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
+                            <img src="..img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
