--- a/pages/faq.html
+++ b/pages/faq.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mewseum/css/layout.css">
-    <link rel="stylesheet" href="/Mewseum/css/faq.css">
+    <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/faq.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
 </head>
@@ -12,28 +12,28 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/Mewseum/index.html">
-                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
+                <a href="../index.html">
+                    <img src="../img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
+                    <li><a href="../pages/about.html">喵繪藝想</a></li>
+                    <li><a href="../pages/shop.html">畫作商店</a></li>
+                    <li><a href="../pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="/Mewseum/img/icon/search.svg" alt="search">
+                    <img src="../img/icon/search.svg" alt="search">
                 </a>
-                <a href="/Mewseum/pages/login.html">
-                    <img src="/Mewseum/img/icon/login.svg" alt="login">
+                <a href="../pages/login.html">
+                    <img src="../img/icon/login.svg" alt="login">
                 </a>
-                <a href="/Mewseum/pages/cart.html">
-                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
+                <a href="../pages/cart.html">
+                    <img src="../img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -88,7 +88,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
+                <img src="../img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -120,13 +120,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="/Mewseum/img/icon/email.svg" alt="email">
+                            <img src="../img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/line.svg" alt="line">
+                            <img src="../img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
+                            <img src="../img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
@@ -136,6 +136,6 @@
                 <p class="copyright">&copy; 2025 緯育TibaMe_前端工程師專業技術養成班學員專題成果。本平台僅供學習與展示，非營利性質。若有侵權疑慮，請聯絡緯育TibaMe，將盡速處理。</p>
         </div>
     </div>
-    <script src="/Mewseum/js/faq.js"></script>
+    <script src="../js/faq.js"></script>
 </body>
 </html>
