--- a/pages/shop.html
+++ b/pages/shop.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mewseum/css/layout.css">
-    <link rel="stylesheet" href="/Mewseum/css/shop.css">
+    <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/shop.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
 </head>
@@ -12,28 +12,28 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="/Mewseum/index.html">
-                    <img src="/Mewseum/img/logo_h.svg" alt="Museum_logo">
+                <a href="../index.html">
+                    <img src="../img/logo_h.svg" alt="Museum_logo">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/Mewseum/pages/about.html">喵繪藝想</a></li>
-                    <li><a href="/Mewseum/pages/shop.html">畫作商店</a></li>
-                    <li><a href="/Mewseum/pages/faq.html">FAQ</a></li>
+                    <li><a href="../pages/about.html">喵繪藝想</a></li>
+                    <li><a href="../pages/shop.html">畫作商店</a></li>
+                    <li><a href="../pages/faq.html">FAQ</a></li>
                     <li><a href="#">聯絡我們</a></li>
                     <li><a href="#">店面資訊</a></li>
                 </ul>
             </nav>
             <div class="toolbar">
                 <a href="#">
-                    <img src="/Mewseum/img/icon/search.svg" alt="search">
+                    <img src="../img/icon/search.svg" alt="search">
                 </a>
-                <a href="/Mewseum/pages/login.html">
-                    <img src="/Mewseum/img/icon/login.svg" alt="login">
+                <a href="../pages/login.html">
+                    <img src="../img/icon/login.svg" alt="login">
                 </a>
-                <a href="/Mewseum/pages/cart.html">
-                    <img src="/Mewseum/img/icon/cart.svg" alt="shoppingcart">
+                <a href="../pages/cart.html">
+                    <img src="../img/icon/cart.svg" alt="shoppingcart">
                 </a>
             </div>
         </div>
@@ -44,27 +44,27 @@
             <div class="category">
                 <button>
                     <div class="text">全部商品</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
                 <button>
                     <div class="text">經典致敬系列</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
                 <button>
                     <div class="text">宮廷喵</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
                 <button>
                     <div class="text">英雄喵</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
                 <button>
                     <div class="text">優雅喵</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
                 <button>
                     <div class="text">文藝復興喵</div>
-                    <img src="/Mewseum/img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
                 </button>
             </div>
         </aside>
@@ -73,9 +73,9 @@
             <h2 class="title">畫作商店</h2>
             <div class="shop_header">
                 <nav class="breadcrumb">
-                    <a href="/Mewseum/pages/shop.html">全部商品</a>
+                    <a href="../pages/shop.html">全部商品</a>
                     <span class="divider">›</span>
-                    <a href="/Mewseum/pages/shop.html">經典致敬系列</a>
+                    <a href="../pages/shop.html">經典致敬系列</a>
                 </nav>
 
                 <div class="sort_select">
@@ -88,115 +88,115 @@
                 </div>
             </div>
             <div class="product_grid">
-                    <a href="/Mewseum/pages/product-detail.html" class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/VanCat.png" alt="絕育剪耳自畫像">
+                    <a href="../pages/product-detail.html" class="product_card">
+                        <img src="../img/noRadiusPrint/VanCat.png" alt="絕育剪耳自畫像">
                         <h3>絕育剪耳自畫像</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 1,080</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </a>
 
-                    <a href="/Mewseum/pages/product-detail.html" class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/Peralcat.png" alt="戴著鋼珠耳環的貓">
+                    <a href="../pages/product-detail.html" class="product_card">
+                        <img src="../img/noRadiusPrint/Peralcat.png" alt="戴著鋼珠耳環的貓">
                         <h3>戴著鋼珠耳環的貓</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </a>
 
-                    <a href="/Mewseum/pages/product-detail.html" class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/yellingCat.png" alt="吶尼">
+                    <a href="../pages/product-detail.html" class="product_card">
+                        <img src="../img/noRadiusPrint/yellingCat.png" alt="吶尼">
                         <h3>吶尼</h3>
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </a>
 
-                    <a href="/Mewseum/pages/product-detail.html" class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/dancingCat.png" alt="舞喵">
+                    <a href="../pages/product-detail.html" class="product_card">
+                        <img src="../img/noRadiusPrint/dancingCat.png" alt="舞喵">
                         <h3>舞喵</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </a>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/monaleeCat.png" alt="蒙娜麗喵的賊笑">
+                        <img src="../img/noRadiusPrint/monaleeCat.png" alt="蒙娜麗喵的賊笑">
                         <h3>蒙娜麗喵的賊笑</h3>
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/awakecat.png" alt="吵醒">
+                        <img src="../img/noRadiusPrint/awakecat.png" alt="吵醒">
                         <h3>吵醒</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/mirrorcat.png" alt="喵鏡">
+                        <img src="../img/noRadiusPrint/mirrorcat.png" alt="喵鏡">
                         <h3>喵鏡</h3>
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/hugratcat.png" alt="抱著銀貂的貓">
+                        <img src="../img/noRadiusPrint/hugratcat.png" alt="抱著銀貂的貓">
                         <h3>抱著銀貂的貓</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/masiaCat.png" alt="聖貓">
+                        <img src="../img/noRadiusPrint/masiaCat.png" alt="聖貓">
                         <h3>聖貓</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/StreetCat.png" alt="回頭的浪貓">
+                        <img src="../img/noRadiusPrint/StreetCat.png" alt="回頭的浪貓">
                         <h3>回頭的浪貓</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/sanCatFamily.png" alt="橡樹下的貓族">
+                        <img src="../img/noRadiusPrint/sanCatFamily.png" alt="橡樹下的貓族">
                         <h3>橡樹下的貓族</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cutecart.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
-                        <img src="/Mewseum/img/noRadiusPrint/babyCats.png" alt="秋日逗貓圖">
+                        <img src="../img/noRadiusPrint/babyCats.png" alt="秋日逗貓圖">
                         <h3>秋日逗貓圖</h3>
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="/Mewseum/img/icon/cutecart.svg" alt="cart">
+                            <img src="../img/icon/cutecart.svg" alt="cart">
                         </button>
                     </div>
             </div>
@@ -214,7 +214,7 @@
     <div class="footer">
         <div class="f_container">
             <div class="logo_2">
-                <img src="/Mewseum/img/logo_V.svg" alt="Museum_logo2">
+                <img src="../img/logo_V.svg" alt="Museum_logo2">
             </div>
             <div class="footer_wrap">
                 <div class="link">
@@ -246,13 +246,13 @@
                     <div class="social_icon">
                         
                         <a href="#">
-                            <img src="/Mewseum/img/icon/email.svg" alt="email">
+                            <img src="../img/icon/email.svg" alt="email">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/line.svg" alt="line">
+                            <img src="../img/icon/line.svg" alt="line">
                         </a>
                         <a href="#">
-                            <img src="/Mewseum/img/icon/ig.svg" alt="instagram">
+                            <img src="../img/icon/ig.svg" alt="instagram">
                         </a>
                     </div>
                 </div>
