--- a/pages/shop.html
+++ b/pages/shop.html
@@ -94,7 +94,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 1,080</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </a>
 
@@ -104,7 +104,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </a>
 
@@ -114,7 +114,7 @@
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </a>
 
@@ -124,7 +124,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </a>
                     <div class="product_card">
@@ -133,7 +133,7 @@
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -142,7 +142,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -151,7 +151,7 @@
                         <div class="rate">⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -160,7 +160,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -169,7 +169,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -178,7 +178,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -187,7 +187,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.png" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
                     <div class="product_card">
@@ -196,7 +196,7 @@
                         <div class="rate">⭐⭐⭐⭐⭐</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
-                            <img src="../img/icon/cutecart.svg" alt="cart">
+                            <img src="../img/icon/cart_white.png" alt="cart">
                         </button>
                     </div>
             </div>
